--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -1,30 +1,26 @@
+<!DOCTYPE html>
+<html lang="es">
 <head>
-    <title>Mi hola mundo</title>
+    <title>Testeando</title>
+
+    <!--CSS code-->
     <link rel="stylesheet" href="styles.css">
+
+    <!--Fuentes-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+    <header class="header">
+        <img src="logo.png" id="logo" class="logo">
+        <nav>
+            <a href='#' title="Probando HTML" class="aNav">Jugar!</a>
+            <a href='#' title="Probando HTML" class="aNav">Contactanos, si tienes ganas</a>
+        </nav>
+        <!--<button id="boton" class="cuadrado"></button>-->
+    </header>
 
-    <img src="un link">
-
-    <h1 id="tituloPrincipal">Hola mundo</h1>
-    <h2 class="textoRojo">Hola mundo</h2>
-    <h2>Hola mundo</h2>
-    <h3>Hola mundo</h3>
-    <h4>Hola mundo</h4>
-    <h5>Hola mundo</h5>
-    <h6>Hola mundo</h6>
-
-    <p>Esto es un parrafo</p>
-    <b>Negrita</b>
-    <i>Italica</i>
-
-    <a href="http://www.google.com">Link</a>
-    <a href="http://www.google.com" target="_blank">Link</a>
+    <script src="scripts.js"></script>
 </body>
-
-<etiqueta color = "red">
-
-</etiqueta>
-
-<etiqueta />
-
