Avances + Grilla para juego

--- a/TP 2/juego.html
+++ b/TP 2/juego.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <title>Juego Conway</title>
+    <title>Juegooo</title>
 
     <!--CSS code-->
     <link rel="stylesheet" href="css/styles.css">
@@ -16,10 +16,13 @@
     <header class="header">
         <img src="imagenes/logo.png" id="logo" class="logo">
         <nav>
-            <a href='juego.html' class="aNav">Jugar!</a>
-            <a href='#' class="aNav">Contactanos, si tienes ganas</a>
+            <a href='index.html' class="aNav">Back</a>
         </nav>
+        <!--<button id="boton" class="cuadrado"></button>-->
     </header>
+
+    <button id="startButton">Start</button>
+    <div id="grid"></div>
 
     <script src="js/scripts.js"></script>
 </body>
