--- a/TP 2/juego.html
+++ b/TP 2/juego.html
@@ -15,13 +15,13 @@
 <body>
     <header class="header">
         <img src="imagenes/logo.png" id="logo" class="logo">
+        <button class="boton" id="botonInicio">Iniciar</button>
+        <button class="boton" id="botonReseteo">Resetear</button>
         <nav>
             <a href='index.html' class="aNav">Back</a>
         </nav>
-        <!--<button id="boton" class="cuadrado"></button>-->
     </header>
 
-    <button id="startButton">Start</button>
     <div id="grid"></div>
 
     <script src="js/scripts.js"></script>
