Nueva sección 'Patrones' + más cosas en navbar de juego

--- a/TP 2/juego.html
+++ b/TP 2/juego.html
@@ -15,14 +15,16 @@
 <body>
     <header class="header">
         <img src="imagenes/logo.png" id="logo" class="logo">
+        <p class="numGen" id="numGen">Generación: 0</p>
         <button class="boton" id="botonInicio">Iniciar</button>
+        <button class="boton" id="botonProxGen">Proxima Generación</button>
         <button class="boton" id="botonReseteo">Resetear</button>
         <nav>
-            <a href='index.html' class="aNav">Back</a>
+            <a href='index.html' class="aNav">Atras</a>
         </nav>
     </header>
 
-    <div id="grid"></div>
+    <div class="grid" id="grid"></div>
 
     <script src="js/scripts.js"></script>
 </body>
