--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <title>Juego Conway</title>
+    <link rel="icon" href="imagenes/logo.png">
 
     <!--CSS code-->
     <link rel="stylesheet" href="css/styles.css">
@@ -17,7 +18,6 @@
         <img src="imagenes/logo.png" id="logo" class="logo">
         <nav>
             <a href='juego.html' class="aNav">Jugar!</a>
-            <a href='patrones.html' class="aNav">Patrones</a>
         </nav>
     </header>
 
