--- a/TP 2/juego.html
+++ b/TP 2/juego.html
@@ -2,6 +2,7 @@
 <html lang="es">
 <head>
     <title>Juegooo</title>
+    <link rel="icon" href="imagenes/logo.png">
 
     <!--CSS code-->
     <link rel="stylesheet" href="css/styles.css">
