cambios reglas pau

--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -20,6 +20,9 @@
             <a href='juego.html' class="aNav">Jugar!</a>
         </nav>
     </header>
+    <section class="contenedor">
+        <h1 class="tituloJuego">Juego de la Vida de Conway</h1>
+    </section>
 
     <section class="contenedor">
         <div class="columna">
@@ -30,14 +33,18 @@
                 <br />-Si tiene 2 o 3 celulas vecinas vivas sobrevive.
             </p> 
         </div>
-        <div>Imagenes regla 1</div>
+        <div class="columna">
+            <img src="imagenes/Regla1.png" id="regla1" class="imagenRegla">
+        </div>
         <div class="columna">
             <h1 class="tituloReglas">Regla 2</h1>
             <p class="textoReglas">Si una celula esta muerta:
                 <br /> -Si tiene 3 vecinos vivos, revive.
                 <br /> -En otro caso continua muerta.
         </div>
-        <div>Imagenes regla 2</div>
+        <div class="columna">
+            <img src="imagenes/Regla2.png" id="regla2" class="imagenRegla">
+        </div>
     </section>
 
     <script src="js/scripts.js"></script>
