--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -20,7 +20,7 @@
             <a href='juego.html' class="aNav">Jugar!</a>
         </nav>
     </header>
-    <section class="contenedor">
+    <section>
         <h1 class="tituloJuego">Juego de la Vida de Conway</h1>
     </section>
 
@@ -29,7 +29,7 @@
             <h1 class="tituloReglas">Regla 1</h1>
             <p class="textoReglas">Si una celula esta viva:
                 <br /> -Si tiene mas de 3 vecinos vivos muere por sobrepoblacion.
-                <br /> -Si tiene menos de 2 celulas vecinas vivas muere por algo.
+                <br /> -Si tiene menos de 2 celulas vecinas vivas muere por aislación.
                 <br />-Si tiene 2 o 3 celulas vecinas vivas sobrevive.
             </p> 
         </div>
