--- a/TP 2/juego.html
+++ b/TP 2/juego.html
@@ -21,7 +21,7 @@
         <button class="boton" id="botonProxGen">Proxima Generación</button>
         <button class="boton" id="botonReseteo">Resetear</button>
         <nav>
-            <a href='index.html' class="aNav">Atras</a>
+            <a href='index.html' class="aNav">Atrás</a>
         </nav>
     </header>
 
