Seccion de explicacion

--- a/TP 2/index.html
+++ b/TP 2/index.html
@@ -24,13 +24,45 @@
         <h1 class="tituloJuego">Juego de la Vida de Conway</h1>
     </section>
 
+    <section class="seccionExplicacion">
+        <h2>¿Qué es el Juego de la Vida?</h2>
+            <p class="textoReglas">
+                El juego de la vida de Conway es un modelo matemático computacional que simula sistemas naturales
+                formados por muchos objetos que llamaremos células, que interactúan entre sí con unas reglas muy sencillas.
+                En ciertas ocasiones, de estas reglas pueden surgir cosas tan complejas que parecen casi mágicas.
+            </p>
+
+            <p class="textoReglas">
+                El objetivo de hacer matemáticas es también jugar, y eso es precisamente lo que vamos a hacer.
+                Vamos a jugar al juego de la vida de Conway, un juego diseñado para cero jugadores.
+            </p>
+
+            <br />
+
+            <h2>¿Cómo funciona?</h2>
+            <p class="textoReglas">
+                Este juego consta de un número infinito de celdas, pero para poder visualizarlo veremos una vista finita,
+                que debemos imaginar que se extiende hacia el infinito en todas direcciones.
+            </p>
+
+            <p class="textoReglas">
+                Cada celda, que llamaremos "células", se comporta como si fuera un organismo vivo. Existen dos posibilidades:
+                una célula está viva (que pintaremos de color negro) o está muerta (de color blanco).
+            </p>
+
+            <p class="textoReglas">
+                Se comienza con una configuración inicial de células vivas y muertas, que podemos escoger libremente.
+                Conforme pasa el tiempo, el juego decide qué células mueren y cuáles sobreviven.
+            </p>
+    </section>
+
     <section class="contenedor">
         <div class="columna">
             <h1 class="tituloReglas">Regla 1</h1>
             <p class="textoReglas">Si una célula está viva:
                 <br /> -Si tiene más de 3 vecinos vivos, muere por sobrepoblación.
                 <br /> -Si tiene menos de 2 células vecinas vivas, muere por aislación.
-                <br />-Si tiene 2 o 3 células vecinas vivas, sobrevive.
+                <br /> -Si tiene 2 o 3 células vecinas vivas, sobrevive.
             </p> 
         </div>
         <div class="columna">
