--- a/TP 2/pages/juego.html
+++ b/TP 2/pages/juego.html
@@ -2,10 +2,11 @@
 <html lang="es">
 <head>
     <title>Juegooo</title>
-    <link rel="icon" href="imagenes/logo.png">
+    <link rel="icon" href="../img/logo.png">
 
     <!--CSS code-->
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="../css/styles-juego.css">
+    <link rel="stylesheet" href="../css/styles-navbar.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -15,7 +16,7 @@
 
 <body>
     <header class="header">
-        <img src="imagenes/logo.png" id="logo" class="logo">
+        <img src="../img/logo.png" id="logo" class="logo">
         <p class="numGen" id="numGen">Generación: 0</p>
         <button class="boton" id="botonInicio">Iniciar</button>
         <button class="boton" id="botonProxGen">Proxima Generación</button>
@@ -27,5 +28,6 @@
 
     <div class="grid" id="grid"></div>
 
-    <script src="js/scripts.js"></script>
+    <script src="../js/scripts-juego.js"></script>
+    <script src="../js/scripts-navbar.js"></script>
 </body>
