Cambio de juego y mejora de patrones

--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -12,19 +12,62 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
 </head>
 
 <body>
+
+    <!--------------------------Navbar-------------------------->
+
     <header class="header">
         <img src="../img/logo.png" id="logo" class="logo">
         <nav>
-            <a href='index.html' class="aNav">Atrás</a>
+            <a href='index.html' class="aNav">Home</a>
+            <a href='juego.html' class="aNav">Jugar!</a>
         </nav>
     </header>
+
+    <!-------------------------Patrones------------------------->
+
+    <section class="seccion-patrones">
+        <h1 class="titulo">Tipos de patrones</h1>
+
+        <div class="cards-patrones">
+            <div class="tipo-patron">
+                <h2 class="titulo-patron">Vidas Estáticas</h2>
+            </div>
+            <div class="tipo-patron">
+                <h2 class="titulo-patron">Oscilantes</h2>
+            </div>
+            <div class="tipo-patron">
+                <h2 class="titulo-patron">Matusalenes</h2>
+                <video autoplay muted class="video">
+                    <source src="../gifs/matusalen-diehard.webm" type="video/webm">
+                </video>
+            </div>
+            <div class="tipo-patron">
+                <h2 class="titulo-patron">Naves Espaciales</h2>
+            </div>
+        </div>
+    </section>
+
+
+
+
+
+
+
+    <!-- viejo -->
+
+    <video autoplay muted>
+        <source src="../gifs/matusalen-diehard.webm" type="video/webm">
+    </video>
 
     <section>
         <h1 class="tituloPatrones">Tipos de patrones</h1>
     </section>
+
+    <img src="../gifs/matusalen-diehard.webm">
     
     <section class="contenedor">
         <div class="columna">
