--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -34,19 +34,40 @@
 
         <div class="cards-patrones">
             <div class="tipo-patron">
-                <h2 class="titulo-patron">Vidas Estáticas</h2>
+                <div class="tipo-patron-frente">
+                    <h2 class="titulo-patron">Vidas Estáticas</h2>
+                    <img src="../img/estatico-sapo.png" class="img-gif-card">
+                </div>
+                <div class="tipo-patron-atras">
+                    <p>Holaaaaa</p>
+                </div>
             </div>
             <div class="tipo-patron">
-                <h2 class="titulo-patron">Oscilantes</h2>
+                <div class="tipo-patron-frente">
+                    <h2 class="titulo-patron">Oscilantes</h2>
+                    <img src="../gifs/oscilante-palito.gif" class="img-gif-card">
+                </div>
+                <div class="tipo-patron-atras">
+                    <p>Holaaaaa</p>
+                </div>
             </div>
             <div class="tipo-patron">
-                <h2 class="titulo-patron">Matusalenes</h2>
-                <video autoplay muted class="video">
-                    <source src="../gifs/matusalen-diehard.webm" type="video/webm">
-                </video>
+                <div class="tipo-patron-frente">
+                    <h2 class="titulo-patron">Matusalenes</h2>
+                    <img src="../img/matusalen-diehard1.png" class="img-gif-card">
+                </div>
+                <div class="tipo-patron-atras">
+                    <p>Holaaaaa</p>
+                </div>
             </div>
             <div class="tipo-patron">
-                <h2 class="titulo-patron">Naves Espaciales</h2>
+                <div class="tipo-patron-frente">
+                    <h2 class="titulo-patron">Naves Espaciales</h2>
+                    <img src="../gifs/glider.gif" class="img-gif-card">
+                </div>
+                <div class="tipo-patron-atras">
+                    <p>Holaaaaa</p>
+                </div>
             </div>
         </div>
     </section>
@@ -55,19 +76,16 @@
 
 
 
-
-
+    
     <!-- viejo -->
 
-    <video autoplay muted>
+    <video autoplay muted loop class="video">
         <source src="../gifs/matusalen-diehard.webm" type="video/webm">
     </video>
 
     <section>
         <h1 class="tituloPatrones">Tipos de patrones</h1>
     </section>
-
-    <img src="../gifs/matusalen-diehard.webm">
     
     <section class="contenedor">
         <div class="columna">
@@ -105,4 +123,5 @@
     </section>
 
     <script src="../js/scripts-navbar.js"></script>
+    <script src="../js/scripts-patrones.js"></script>
 </body>
