Comienzo de sección 'Más patrones'

--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -30,11 +30,32 @@
 
     <!---------------------Tipos de Patrones--------------------->
 
-    <section class="seccion-patrones">
+    <section class="seccion-tipos-patrones">
         <h1 class="titulo">Tipos de patrones</h1>
 
         <!-- Creación dinámica en scripts-patrones.js -->
         <div class="cards-patrones" id="cards-patrones"></div>
+    </section>
+
+    <!---------------------Tipos de Patrones--------------------->
+    
+    <section class="seccion-patrones">
+        <h1 class="titulo">Más patrones</h1>
+
+        <div class="slider-patron">
+            <h2 class="titulo-patron">Vidas Estáticas</h2>
+            <div class="patron-imagenes">
+                <ul class="lista-ejemplos-patron">
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                    <li class="item-ejemplos-patron"><img src="../img/estatico-sapo.png" class="item-imagen"></li>
+                </ul>
+            </div>
+        </div>
+
     </section>
 
     <!--JavaScript code-->
