--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -42,31 +42,9 @@
     <section class="seccion-patrones">
         <h1 class="titulo">Más patrones</h1>
 
-        <div class="slider-patron">
-            <h2 class="titulo-patron">Vidas Estáticas</h2>
-            <div class="patron-imagenes">
-                <ul class="lista-ejemplos-patron">
-                    <li class="item-ejemplos-patron">
-                        <img src="../img/estatico-sapo.png" class="item-imagen">
-                        <p class="nombre-patron">Sapo</p>
-                    </li>
-                    <li class="item-ejemplos-patron">
-                        <img src="../img/estatico-sapo.png" class="item-imagen">
-                        <p class="nombre-patron">Holaaaaa</p>
-                    </li>
-                </ul>
-            </div>
-        </div>
-        <div class="slider-patron">
-            <h2 class="titulo-patron">Oscilantes</h2>
-            <div class="patron-imagenes">
-                <ul class="lista-ejemplos-patron">
-                    <li class="item-ejemplos-patron"><img src="../gifs/oscilante-palito.gif" class="item-imagen"></li>
-                    <li class="item-ejemplos-patron"><img src="../gifs/oscilante-sol.gif" class="item-imagen"></li>
-                    <li class="item-ejemplos-patron"><img src="../gifs/oscilante-tornado.gif" class="item-imagen"></li>
-                </ul>
-            </div>
-        </div>
+        <!-- Creación dinámica en scripts-patrones.js -->
+        <div id="seccion-patrones"></div>
+        
 
     </section>
 
