--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -8,12 +8,17 @@
     <!--CSS code-->
     <link rel="stylesheet" href="../css/styles-patrones.css">
     <link rel="stylesheet" href="../css/styles-navbar.css">
+    <link rel="stylesheet" href="../css/styles-footer.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Ubuntu+Sans:ital,wght@0,100..800;1,100..800&display=swap" rel="stylesheet">
+
+    <!--Logos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -35,6 +40,7 @@
 
         <!-- Creación dinámica en scripts-patrones.js -->
         <div class="cards-patrones" id="cards-patrones"></div>
+
     </section>
 
     <!---------------------Tipos de Patrones--------------------->
@@ -44,11 +50,22 @@
 
         <!-- Creación dinámica en scripts-patrones.js -->
         <div id="seccion-patrones"></div>
-        
 
     </section>
+
+    <!--------------------------Footer-------------------------->
+
+    <footer class="footer">
+
+        <!-- Creación dinámica en scripts-footer.js -->
+        <div class="sobre-nosotros" id="sobre-nosotros"></div>
+
+    </footer>
+
+    
 
     <!--JavaScript code-->
     <script src="../js/scripts-navbar.js"></script>
     <script src="../js/scripts-patrones.js"></script>
+    <script src="../js/scripts-footer.js"></script>
 </body>
