Acomodación de código y cambio de comentarios

--- a/TP 2/pages/patrones.html
+++ b/TP 2/pages/patrones.html
@@ -43,7 +43,7 @@
 
     </section>
 
-    <!---------------------Tipos de Patrones--------------------->
+    <!---------------------Ejemplos Patrones--------------------->
     
     <section class="seccion-patrones">
         <h1 class="titulo">Más patrones</h1>
@@ -61,8 +61,6 @@
         <div class="sobre-nosotros" id="sobre-nosotros"></div>
 
     </footer>
-
-    
 
     <!--JavaScript code-->
     <script src="../js/scripts-navbar.js"></script>
