--- a/TP 2/pages/index.html
+++ b/TP 2/pages/index.html
@@ -8,12 +8,16 @@
     <!--CSS code-->
     <link rel="stylesheet" href="../css/styles-index.css">
     <link rel="stylesheet" href="../css/styles-navbar.css">
+    <link rel="stylesheet" href="../css/styles-footer.css">
 
     <!--Fuentes-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display" rel="stylesheet">
+
+    <!--Logos-->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 
 <body>
@@ -113,6 +117,14 @@
         </div>
     </section>
 
+    <footer class="footer">
+
+        <!-- Creación dinámica en scripts-footer.js -->
+        <div class="sobre-nosotros" id="sobre-nosotros"></div>
+
+    </footer>
+
     <script src="../js/scripts-navbar.js"></script>
     <script src="../js/scripts-index.js"></script>
+    <script src="../js/scripts-footer.js"></script>
 </body>
